--- a/public/index.html
+++ b/public/index.html
@@ -42,13 +42,31 @@
                 </div>
                 <div class="col-12 col-sm-1">
                     <input class="form-control file" type="file" id="formFile" hidden>
-                    <label for="formFile"><i class="fa-solid fa-paperclip fa-2x"></i></label>
+                    <label for="formFile"><i class="fa-solid fa-paperclip fa-xl" data-toggle="tooltip" data-placement="bottom" title="Attach file"></i></label>
                 </div>
                 <div class="col col-sm">
-                    <button type="submit" class="btn"><i class="fa-solid fa-paper-plane fa-lg"></i></button>
+                    <button type="submit" class="btn" data-type="tooltip" data-placement="bottom" title="Send"><i class="fa-solid fa-paper-plane fa-lg"></i></button>
                 </div>
             </div>
         </form>
+    </div>
+    <div id="myModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Join V-Chat meeting</h5>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" id="nametext" class="form-control" placeholder="Enter your Name">
+                        </div>
+                        <button type="submit" class="btn btn-primary" data-dismiss="modal">Join</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Bootstrap JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -66,6 +84,17 @@
     <script defer src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
 
     <script defer src="client.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            $("#myModal").modal('show');
+        });
+        $("#myModal").modal({
+            backdrop : 'static',
+            keyboard : false
+        });
+    </script>
+
 </body>
 
 </html>
