started file upload

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="./logo.png">
 
     <!-- Fontawesome kit link -->
     <script src="https://kit.fontawesome.com/6de8ba83ba.js" crossorigin="anonymous"></script>
@@ -61,7 +62,7 @@
                     <input type="text" class="form-control" id="text" placeholder="Type your message">
                 </div>
                 <div class="col-12 col-sm-1">
-                    <input class="form-control file" type="file" id="formFile" hidden>
+                    <input class="form-control file" type="file" id="formFile" name="upload" accept="image/png, image/jpg, image/jpeg" hidden>
                     <label for="formFile"><i class="fa-solid fa-paperclip fa-xl" data-toggle="tooltip"
                             data-placement="bottom" title="Attach file"></i></label>
                 </div>
